--- a/src/components/Stage.css
+++ b/src/components/Stage.css
@@ -1,38 +1,45 @@
-.Stage > img {
-    width: 100%;
-    
-    height: 840px;
-    margin-bottom: 0px;
-    filter: brightness(50%);
-
-}
 .Stage {
     position: relative;
     height: 840px;
-
-}
-.StageWrapper {
-    position: absolute;
-    top: 40%;
-    display: flex;
-    gap: 25px;
-    left:8%;
-
+    overflow: hidden;
 }
 
-.Stage > h1{
+.Stage > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
+}
+
+.Stage > h1 {
     position: absolute;
     color: white;
     top: 15%;
-    left: 30%;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 50px;
-    white-space: noWrap;
+    white-space: nowrap;
+    text-align: center;
 }
-.Stage > h2{
-    color: white;
+
+.Stage > h2 {
     position: absolute;
     color: white;
-    top: 25%;
-    left: 37%;
-        white-space: noWrap;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    font-size: 24px;
+    text-align: center;
+}
+
+.StageWrapper {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
 }
