--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,10 @@
 .Footer{
     width: 100%;
-    height: 87px;
+    height: 90px;
+    margin-top: 0;
     background-color: #1a2a3b;
+    position: fixed;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: end;
